opam-version: "2.0"
name: "jelly"
version: "~dev"
synopsis: "Simple Lisp interpreter"
maintainer: "Vlad Lopalo"
authors: "Vlad Lopalo"
depends: [
  "dune" {>= "1.11.4"}
  "ocaml-base-compiler" {= "4.08.1"}
  "merlin" {dev & >= "3.3.2"}
  "ocamlformat" {dev  & >= "0.11.0"}
  "ocp-indent" {dev & >= "1.8.1"}
  "utop" {dev & >= "2.4.2"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
