opam-version: "2.0"
name: "jelly"
version: "~dev"
synopsis: "Simple Lisp interpreter"
maintainer: "Vlad Lopalo"
authors: "Vlad Lopalo"
depends: [
  "dune" {>= "1.11.4"}
  "ocaml-base-compiler" {= "4.08.1"}
  "fmt" {>= "0.8.8"}
  "ppx_deriving" {>= "4.4"}

  "alcotest" {>= "0.8.5"}

  "merlin" {>= "3.3.2"}
  "ocamlformat" {>= "0.11.0"}
  "ocp-indent" {>= "1.8.1"}
  "utop" {>= "2.4.2"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
